testdata/baselines/reference/submodule/conformance/jsdocAugmentsMissingType.errors.txt
/a.js(2,14): error TS8023: JSDoc '@augments ' does not match the 'extends A' clause.
/a.js(3,17): error TS8010: Type annotations can only be used in TypeScript files.


==== /a.js (2 errors) ====
    class A { constructor() { this.x = 0; } }
    /** @augments */
                 
!!! error TS8023: JSDoc '@augments ' does not match the 'extends A' clause.
    class B extends A {
                    ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
        m() {
            this.x
        }
    }
    